// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tooltip/demo/arrow-point-at-center.md correctly 1`] = `
<div>
  <div
    id="TriggerContainer"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Align edge / 边缘对齐
      </span>
    </button>
  </div>
  <div
    id="TriggerContainer"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Arrow points to center / 箭头指向中心
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/tooltip/demo/auto-adjust-overflow.md correctly 1`] = `
<div
  style="overflow:hidden;position:relative;padding:24px;border:1px solid #e9e9e9;"
>
  <div
    id="TriggerContainer"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Adjust automatically / 自动调整
      </span>
    </button>
  </div>
  <br />
  <div
    id="TriggerContainer"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Ingore / 不处理
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/tooltip/demo/basic.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <span>
    Tooltip will show when mouse enter.
  </span>
</div>
`;

exports[`renders ./components/tooltip/demo/placement.md correctly 1`] = `
<div>
  <div
    style="margin-left:60px;"
  >
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        TL
      </a>
    </div>
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        Top
      </a>
    </div>
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        TR
      </a>
    </div>
  </div>
  <div
    style="width:60px;float:left;"
  >
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        LT
      </a>
    </div>
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        Left
      </a>
    </div>
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        LB
      </a>
    </div>
  </div>
  <div
    style="width:60px;margin-left:270px;"
  >
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        RT
      </a>
    </div>
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        Right
      </a>
    </div>
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        RB
      </a>
    </div>
  </div>
  <div
    style="margin-left:60px;clear:both;"
  >
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        BL
      </a>
    </div>
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        Bottom
      </a>
    </div>
    <div
      id="TriggerContainer"
    >
      <a
        href="#"
      >
        BR
      </a>
    </div>
  </div>
</div>
`;
